Prevent overlapping of story description with footer content, reorder properties of home.scss to pass tests

--- a/src/assets/scss/pages/story.scss
+++ b/src/assets/scss/pages/story.scss
@@ -25,7 +25,7 @@
   }
 
   &-page {
-    height: 100vh;
+    height: 100%;
     position: relative;
   }
 
